hill: changed announcements size; aligned logo; fixed footer

--- a/Generic/hill/frontend/structure.sass
+++ b/Generic/hill/frontend/structure.sass
@@ -12,7 +12,7 @@ div#header
     height: 152px
     margin: auto
     position: relative
-    width: 1000px
+    width: 950px
 
   span.options
     color: #FFF
@@ -47,7 +47,9 @@ div#header
     background-repeat: no-repeat
     height: 113px
     float: left
+    left: -25px
     margin: 10px 0 0
+    position: relative
     width: 305px
 
   div#menu
@@ -77,7 +79,7 @@ div#tag-menu
   border: 1px solid #DDD
   margin-right: 0
   padding: 10px 20px
-  width: 21.8%
+  width: 20.8%
   @include round-corners(5px, 5px, 5px, 5px)
   @include enable-ie-css3
 
@@ -103,13 +105,15 @@ div#content.single
 
 div#content.double
   margin-left: 0
+  margin-right: 0
+  width: 74%
 
 
 div#main
   background-color: #FFF
   min-height: 300px
   margin: 20px auto 0
-  width: 1000px
+  width: 950px
 
 
 div#user-info, div#user-invite
@@ -117,40 +121,40 @@ div#user-info, div#user-invite
 
 
 div#footer
-  background-color: #8B8B8B
-  height: 210px
+  overflow-x: hidden // Firefox needs this
+  position: relative
+  @include linear-gradient(#B5B5B5, #909090)
+  @include enable-ie-css3
 
   a:hover
     border-bottom: 2px solid $default-color
 
-  p
-    margin: 30px 30px 30px 0
+  div.wrapper
+    margin: 0 auto
+    width: 950px
+    overflow: auto
 
-  div.textile-body
-    margin: 0
-
-  div#gradient
-    float: left
-    height: 100%
-    width: 69%
-    @include linear-gradient(#B5B5B5, #909090)
-    @include enable-ie-css3
-
-  div#center
-    margin: auto
-    position: relative
-    width: 1000px
+    div.textile-body
+      margin: 0
 
     div#text-left
-      height: 100%
-      position: absolute
-      width: 78%
+      float: left
+      min-height: 120px
+      padding: 40px 10px
+      width: 680px
+      @include linear-gradient(#B5B5B5, #909090)
+      @include enable-ie-css3
 
     div#text-right
+      background-color: #8B8B8B
       height: 100%
+      margin-left: 710px
       position: absolute
-      right: 0
-      width: 22%
+      overflow: auto
+      width: 100%
+
+      div.textile-body
+        margin: 40px 20px
 
 
 // =============
@@ -160,10 +164,10 @@ div#footer
 
 div#announcements
   border: 1px solid #024873
-  height: 250px
+  height: 200px
   position: relative
-  margin: 20px 0 0
-  width: 1000px
+  margin: 20px auto 0
+  width: 950px
 
   a
     display: block
@@ -190,8 +194,8 @@ div#announcement-numbers
 
 
 div.announcement img
-  height: 250px
-  width: 1000px
+  height: 200px
+  width: 950px
 
 
 div.announcement-text
